@@ -45,6 +45,7 @@ class WHCgiPost
 	      ErrorPostTooLarge=4,ErrorInternal=5,ErrorNotInitialized=6,
 	      ErrorCannotSaveFile=7};
   enum Type {Cgi=0,Internal=1};
+  enum InterfaceMode {Static=0,Dhcp=1,Disabled=2};
   WHCgiPost(bool auto_delete=true);
   ~WHCgiPost();
   Type type() const;
@@ -60,7 +61,7 @@ class WHCgiPost
   bool isFile(const QString &name);
   QString tempDir() const;
   WHSettings *settings();
-  bool dhcpActive(unsigned iface) const;
+  InterfaceMode interfaceMode(unsigned iface) const;
   QHostAddress ipAddress(unsigned iface) const;
   QHostAddress ipNetmask(unsigned iface) const;
   QHostAddress ipGateway() const;
@@ -88,6 +89,7 @@ class WHCgiPost
 		     const QHostAddress &mask,
 		     const QHostAddress &gw,const QHostAddress &dns1,
 		     const QHostAddress &dns2,bool enable_dhcp=false) const;
+  void sendDisableIpCommand(unsigned iface_num) const;
   void sendNtpCommand(const QString &timezone,QString ntp1,QString ntp2) const;
   void sendRebootCommand() const;
   void sendRestartCommand(const QString &sysname) const;
@@ -115,7 +117,7 @@ class WHCgiPost
   unsigned post_content_length;
   WHSettings *post_settings;
   QUdpSocket *post_socket;
-  std::vector<bool> post_dhcp_actives;
+  std::vector<InterfaceMode> post_interface_modes;
   std::vector<QHostAddress> post_ip_addresses;
   std::vector<QHostAddress> post_netmask_addresses;
   QHostAddress post_gateway_address;
